--- a/docs/release_notes/v0.18.0.rst
+++ b/docs/release_notes/v0.18.0.rst
@@ -4,6 +4,8 @@ Pending Release Notes
 Updates / New Features
 ----------------------
 
+Utils
+
 * Modify cosine_distance and cosine_similarity to handle 2D matrix inputs
 
 Fixes
